<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nusim</name>
  <version>0.1.2</version>
  <description>Simulation and visualization package for the turtlebot.</description>
  <maintainer email="maximilianopalay@gmail.com">Maximiliano Palay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>nusim_interfaces</exec_depend>
  <depend>rclcpp</depend>
  <depend>turtlelib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nuturtlebot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
